# api/models/model_fazendas.js
@@ -1,11 +1,17 @@
 const mongoose = require("mongoose");
 
 const fazendaSchema = new mongoose.Schema({
-  nome: { type: String, trim: true, required: true },
-  localizacao: { type: String, trim: true, required: true },
-  area: { type: Number, required: true },
-  culturas: { type: [String], default: [] },
-  proprietario: { type: String, trim: true, required: true }
+  nome: {
+    type: String,
+    required: true
+  },
+  localizacao: {
+    type: String,
+    required: true
+  },
+  // Adicione outros campos conforme necessário
 });
 
-module.exports = mongoose.model("Fazendas", fazendaSchema);
+const Fazenda = mongoose.model("Fazenda", fazendaSchema);
+
+module.exports = Fazenda;
